<resources>

    <string name="app_name">Life Counter</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="add5">+5</string>
    <string name="sub5">-5</string>
    <string name="player1start">Player 1: 20</string>
    <string name="player2start">Player 2: 20</string>
    <string name="player3start">Player 3: 20</string>
    <string name="player4start">Player 4: 20</string>
</resources>
